--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SESSION_ID=Bmwmd$JSJ41VQm
 AUTO_STATUS_SEEN=false
 REJECT_CALL=false 
 MODE=public
-WELCOME=false
+WELCOME=true
 AUTO_READ=false
 AUTO_TYPING=false
 AUTO_RECORDING=false
